adds some stuf around maps and engine it self (in progress)

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 manifest.mf
 nbbuild.xml
 nbproject
-./src/main/jamie/Agents
-./src/main/jamie/Enviroment
+src/main/jamie/Agents
+src/main/jamie/Enviroment
